# real-time-chatapp

./: .gitignore  .gitpod.yml  README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
chat-app/: package-lock.json
chat-app/src/app/: page.tsx
frontend/: package.json
frontend/src/pages/: chat.tsx  index.tsx
frontend/src/pages/api/: hello.ts
