[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.1", features = ["full"]}
tokio-postgres = "0.7.12"
serde =  "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0.89"
maplit = "1.0.2"
reqwest = "0.12.9" # Used for cookies only; Plan to redo using reqwest later